# PaddlePSA-Qwen2.5-VL

./: .gitignore  README.md  pyproject.toml  requirements.txt
psa_paddle/: PyramidAdaptiveBlockSparseAttn.py  __init__.py
psa_paddle/kernels/: __init__.py  attn_pooling_kernel.py  block_importance_kernels.py  psa_kernel_causal.py
psa_paddle/utils/: __init__.py  block_importance.py  psa_logger.py
qwen2.5-vl/: README.md  infer_qwen2_5_vl_psa.py  qwen2_5_vl_psa_attention.py
qwen2.5-vl/PaddleMIX/: .copyright.hook  .gitignore  .pre-commit-config.yaml  README.md  build_env.sh  build_paddle_env.sh  check_env.sh  paddlemix_applications.md  requirements.txt
qwen2.5-vl/PaddleMIX/applications/: gradio_autolable.py  gradio_text2image.py
qwen2.5-vl/PaddleMIX/applications/Audio2Caption/: README.md
qwen2.5-vl/PaddleMIX/applications/Audio2Img/: README.md
qwen2.5-vl/PaddleMIX/applications/AudioChat/: README.md
qwen2.5-vl/PaddleMIX/applications/MULLM/: app.py  model.py
qwen2.5-vl/PaddleMIX/applications/MusicGeneration/: README.md
qwen2.5-vl/PaddleMIX/applications/text2image/: README.md
qwen2.5-vl/PaddleMIX/comfyui/: README.md
qwen2.5-vl/PaddleMIX/comfyui/ComfyUI_ppdiffusers/: README.md  __init__.py  basic_nodes.py  flux_pipe_nodes.py  wan_pipe_nodes.py
qwen2.5-vl/PaddleMIX/deploy/: README.md  README_en.md
qwen2.5-vl/PaddleMIX/deploy/deepseek_vl2/: README.md  deepseek_vl2_infer.py  (+1 more)
qwen2.5-vl/PaddleMIX/docs/: CHANGELOG.md
qwen2.5-vl/PaddleMIX/ppdiffusers/: README.md  requirements.txt
qwen2.5-vl/PaddleMIX/tests/: testing_utils.py
tests/: test_psa.py
(+1187 files in other folders)
