[project]
name = "psa-paddle"
version = "0.1.0"
description = "Pyramid Sparse Attention for PaddlePaddle - Qwen2.5-VL Integration"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "xiaolong-li1" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["psa_paddle"]
